# wasm-benchmarks

./: .gitignore  .gitmodules  Greenlab.ipynb  docker-compose.yml  docker-compose.yml.bak  package.json
.devcontainer/: devcontainer.json
00_webserver/: .Caddyfile.swo  Caddyfile
C++/01_fannkuchredux/: fannkuchredux.gpp-5.html  fannkuchredux.gpp-5.js  makefile
C++/02_nbody/: makefile  nbody.gpp-2.html  nbody.gpp-2.wasm
C++/03_spectralnorm/: spectralnorm.gpp-0.cpp  spectralnorm.gpp-0.html
C++/03_spectralnorm_DNR/: makefile  spectralnorm.gpp-0.html  spectralnorm.gpp-0.wasm
C++/04_mandelbrot/: makefile  mandelbrot.gpp-0.cpp  mandelbrot.gpp-0.html  mandelbrot.gpp-0.wasm
C-Based/: .devcontainer.json
Go/: .devcontainer.json  package.json
Javascript/: package-lock.json  package.json
Rust/: .devcontainer.json  package.json
Rust/03_spectralnorm/: Cargo.toml  wasm-worker.js  wasm_exec.html
Rust/03_spectralnorm/src/: lib.rs
Rust/04_mandelbrot/: Cargo.toml  package.json  wasm-worker.js  wasm_exec.html
Rust/04_mandelbrot/src/: lib.rs
Rust/07_fasta/: Cargo.toml  package.json  wasm-worker.js  wasm_exec.js
Rust/07_fasta/src/: lib.rs
Rust/09_revcomp/: Cargo.toml  package.json  utils.js  wasm-worker.js
Rust/09_revcomp/src/: lib.rs
framework-res/: AndroidManifest.xml  apktool.yml
mitmproxy/: mitmproxy.py  proxy.py
utils/: utils.js
wasm-experiments/: 00_helloworld_chrome.json  00_helloworld_sbrowser.json  01_fannkuchredux_chrome.json  01_fannkuchredux_sbrowser.json  02_nbody_chrome.json  02_nbody_sbrowser.json  03_spectralnorm_chrome.json  03_spectralnorm_sbrowser.json  04_mandelbrot_chrome.json  04_mandelbrot_sbrowser.json  07_fasta_chrome.json  07_fasta_sbrowser.json  09_revcomp_chrome.json  09_revcomp_sbrowser.json  C++.json  C.json  chrome.json  config.json
webserver/: Caddyfile  Caddyfile-local  Caddyfile.bak
(+341 files in other folders)
