[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = {version = "1.0.3", optional = false}
rayon = {version = "1.5.3", optional = false}

[dependencies.web-sys]
version = "0.3.60"
features = [ "console" ]