[package]
name = "revcomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-rayon = {version = "1.0.3", optional = false}
memchr = "2.5.0"
rayon = {version = "1.5.3", optional = false}

[dependencies.web-sys]
version = "0.3.60"
features = [ "console" ]